# rust-axum-todo-api

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json  tailwind.config.cjs
.github/workflows/: ci.yml
assets/scripts/: auth.js  cookies.js  todos.js
migrations/: 20230522135746_todos.sql  20230523155247_users.sql
src/: common.rs  errors.rs  lib.rs  main.rs  routes.rs  server.rs  todo.rs
src/auth/: handlers.rs  models.rs  utils.rs  views.rs
src/common/: errors.rs  middlewares.rs  pagination.rs  password_encoder.rs
src/infrastructure/: database.rs
src/scripts/add-user/: main.rs
src/todo/: handlers.rs  models.rs  repository.rs  service.rs  views.rs
src/user/: handlers.rs  models.rs  repository.rs  service.rs  views.rs
src/web/: handlers.rs  html_template.rs
templates/: base.html  index.html  login.html  register.html
