[package]
name = "rust-todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4.24", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.40"
dotenv = "0.15.0"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "2.0.0", features = ["axum"] }
