[package]
name = "rust-todo-api"
version = "0.1.0"
edition = "2021"
default-run = "rust-todo-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-todo-api"
path = "src/main.rs"

[[bin]]
name = "add-user"
path = "src/scripts/add-user/main.rs"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4.37", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.58"
dotenv = "0.15.0"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
clap = { version = "4.5.4", features = ["derive"] }
askama = "0.12.1"
